dati-semantic-frontend/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dati-semantic-frontend
  namespace: ndc-test
  labels:
    application: dati-semantic-frontend
spec:
  host: ndc-test.apps.cloudpub.testedev.istat.it
  to:
    kind: Service
    name: dati-semantic-frontend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
